// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.api.envoy.http.path_matcher;

import "api/envoy/http/common/base.proto";
import "validate/validate.proto";

message PathMatcherRule {
  // The pattern used to match a HTTP request.
  api.envoy.http.common.Pattern pattern = 1;

  // Operation name (selector) used as a unique ID for the operation.
  string operation = 2 [(validate.rules).string.min_bytes = 1];

  // If true, the path parameters in the `pattern` must be extracted.
  // Ref:
  // https://cloud.google.com/endpoints/docs/openapi/openapi-extensions#understanding_path_translation
  bool extract_path_parameters = 3;
}

// FieldName stores the snake name to JSON name mapping as specified in
// Service config.
// For example, for a URI template: /{foo_bar}
//  * snake_name = "foo_bar"
//  * json_name = "fooBar"
message SegmentName {
  // Snake name of a segment.
  string snake_name = 1;
  // JSON name of a segment.
  string json_name = 2;
}

message FilterConfig {
  repeated PathMatcherRule rules = 1;

  // It is invalid for multiple segments to share the same `snake_name` but have
  // different `json_name`.
  repeated SegmentName segment_names = 2;
}
